# ft_printf

./: CMakeLists.txt  Makefile  README.md  a.out  ft_atoi_base.c  ft_printf.c  libft.h  libftprintf.h  libftprintf.h.gch  logs_compiler.txt  notes.c  q.sh  sh_push
ft_extra_functions/: ft_ftoa.c  ft_itoa_base.c  ft_itoa_base_uintmax.c  ft_pow.c  ft_strdel_begn.c  ft_strdupn.c  ft_strnncpy.c  ft_wcharlen.c
ft_printf/: ft_ftoa.c  ft_itoa_base.c  ft_itoe.c  ft_memnncpy.c  ft_numlen.c  ft_pow.c  ft_pre_print.c  ft_printf.c  ft_printf_do.c  ft_printf_do_d_1.c  ft_printf_do_d_2.c  ft_printf_do_oux_1.c  ft_printf_do_oux_2.c  ft_printf_do_p.c  ft_printf_do_psc.c  ft_printf_do_s.c  ft_printf_flags.c  ft_printf_flags_1.c  ft_printf_flags_2.c  ft_printf_helpers.c  ft_printf_is.c  ft_printf_lists.c  ft_printf_parser.c  ft_printf_patterns.c  ft_printf_patterns2.c  ft_printf_patterns_1.c  ft_printf_patterns_2.c  ft_printf_patterns_3.c  ft_printf_pre_print.c  ft_printf_precision_1.c  ft_printf_precision_2.c  ft_printf_precision_3.c  ft_printf_precision_4.c  ft_printf_switch.c  ft_printf_switch_length.c  ft_printf_wide_char.c  ft_printf_width_1.c  ft_printf_width_2.c  ft_strdel_begn.c  ft_strnncpy.c
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_itoa.c  ft_strlen.c  libft.h  ofiles_list
temp/: main.c  notes.txt
